# libirc

./: CMakeLists.txt  README.md
include/libirc/: channel.h  error_code.h  irc_numerics.h  irc_standards.h  libirc_global.h  mode.h  network.h  serializableitem.h  server.h  serveraddress.h  user.h
include/libircclient/: channel.h  irceventhandler.h  libircclient.pro  libircclient_global.h  mode.h  network.h  networkmodehelp.h  parser.h  priority.h  server.h
libirc/: CMakeLists.txt  channel.cpp  channel.h  irc_numerics.h  libirc.pro  mode.cpp  mode.h  network.cpp  network.h  serializableitem.cpp  serializableitem.h  server.cpp  server.h  serveraddress.cpp  serveraddress.h  user.cpp  user.h
libircclient/: CMakeLists.txt  channel.cpp  channel.h  generic.cpp  generic.h  irceventhandler.cpp  irceventhandler.h  libircclient.pro  libircclient_global.h  mode.cpp  mode.h  network.cpp  network.h  networkmodehelp.cpp  networkthread.cpp  networkthread.h  parser.cpp  parser.h  server.cpp  server.h  user.cpp  user.h
